# reelfit

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.claude/: launch.json
app/: config.py  db.py  main.py
app/api/: deps.py  routes_auth.py  routes_credits.py  routes_festival_admin.py  routes_festivals.py  routes_films.py  routes_profiles.py  routes_reviews.py  routes_submissions.py
app/modules/: models_registry.py
app/modules/accounts/: models.py  service.py
app/modules/certificates/: models.py  service.py
app/modules/dashboards/: service.py
app/modules/discounts/: models.py  service.py
app/modules/festivals/: models.py  service.py
app/modules/jury/: models.py  service.py
app/modules/notifications/: models.py  service.py
app/modules/payments/: models.py  service.py
app/modules/recommendations/: service.py
app/modules/reviews/: models.py  service.py
app/modules/scoring/: engine.py  models.py  service.py
app/modules/submissions/: models.py  service.py
docs/: FEATURES.md  REDESIGN.md
docs/redesign/: dark-studio-mockup.html
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  AuthContext.jsx  api.js  main.jsx  styles.css
frontend/src/components/: CalibrationTag.jsx  Layout.jsx  ScoreDial.jsx
frontend/src/pages/: Credits.jsx  Dashboard.jsx  FestivalDashboard.jsx  FestivalDetail.jsx  FestivalSubmissionDetail.jsx  FestivalTools.jsx  Festivals.jsx  FilmEdit.jsx  FilmNew.jsx  FilmScores.jsx  FilmmakerProfile.jsx  Help.jsx  Home.jsx  Login.jsx  (+4 more)
scripts/: seed.py
tests/: conftest.py  test_smoke.py
